--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,8 @@ author:
   name: 王瑶       ## e.g. wuchong Author name
   intro_line1:  "Hello ,I'm WangYao in SDU."    ## your introduction on the bottom of the page
   #intro_line2:  "This is my blog,believe it or not."  ## the 2nd line
-  weibo: http://weibo.com/u/5544149201 #e.g. wuchong1014 or 2176287895 for http://weibo.com/2176287895
+  weibo: http://weibo.com/u/5544149201 
+  #e.g. wuchong1014 or 2176287895 for http://weibo.com/2176287895
   weibo_verifier:  ## e.g. b3593ceb Your weibo-show widget verifier ,if you use weibo-show it is needed.
   tsina:      ## e.g. 2176287895  Your weibo ID,It will be used in share button.
   douban:     ## e.g. wuchong1014 or your id for https://www.douban.com/people/wuchong1014
