--- a/_config.yml
+++ b/_config.yml
@@ -91,16 +91,16 @@ author:
   name: 王瑶       ## e.g. wuchong Author name
   intro_line1:  "Hello ,I'm WangYao in SDU."    ## your introduction on the bottom of the page
   #intro_line2:  "This is my blog,believe it or not."  ## the 2nd line
-  weibo: http://weibo.com/u/5544149201 
+  weibo: u/5544149201 
   #e.g. wuchong1014 or 2176287895 for http://weibo.com/2176287895
   weibo_verifier:  ## e.g. b3593ceb Your weibo-show widget verifier ,if you use weibo-show it is needed.
   tsina:      ## e.g. 2176287895  Your weibo ID,It will be used in share button.
   douban:     ## e.g. wuchong1014 or your id for https://www.douban.com/people/wuchong1014
-  zhihu: jark
+  zhihu: wang-xiao-yao-45-54
   email:  e.g. imjark@gmail.com
   twitter:    ## e.g. jarkwu for https://twitter.com/jarkwu
-  github:     ## e.g. wuchong for https://github.com/wuchong
-  facebook: imjark
+  github:  WangYao-sdu
+  facebook: ##imjark
   linkedin:   ## e.g. wuchong1014 for https://www.linkedin.com/in/wuchong1014
   google_plus:    ## e.g. "111190881341800841449" for https://plus.google.com/u/0/111190881341800841449, the "" is needed!
   stackoverflow:  ## e.g. 3222790 for http://stackoverflow.com/users/3222790/jark
