--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   tsina:      ## e.g. 2176287895  Your weibo ID,It will be used in share button.
   douban:     ## e.g. wuchong1014 or your id for https://www.douban.com/people/wuchong1014
   zhihu: wang-xiao-yao-45-54
-  email:  e.g. imjark@gmail.com
+  email:  wy_sdu@163.com
   twitter:    ## e.g. jarkwu for https://twitter.com/jarkwu
   github:  WangYao-sdu
   facebook: ##imjark
