--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ rss: /atom.xml ## RSS address.
 #### Image
 imglogo:
   enable: true             ## display image logo true/false.
-  #src: img/author.jpg      ## `.svg` and `.png` are recommended,please put image into the theme folder `/jacman/source/img`.
+  src: img/author.jpg      ## `.svg` and `.png` are recommended,please put image into the theme folder `/jacman/source/img`.
   #logo.png        
 #favicon: img/author.jpg    ## size:32px*32px,`.ico` is recommended,please put image into the theme folder `/jacman/source/img`.     
  #favicon.ico
