--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ paginate: 20
 
 #### Site
 title : 王瑶
-tagline: the blog of WangYao
+tagline: It is not our abilities that show what we truly are,it is our choices.
 assets: /assets
 baseurl: 
 
