--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,7 @@ links:
   WangYao's Blog: http://WangYao-sdu.github.io
 
 #### Comment
-duoshuo_shortname:   wuchong
+duoshuo_shortname:   wangyao
 disqus_shortname:     ## e.g. wuchong   your disqus short name.
 #### Share button
 jiathis:
