--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-#### Exclude
+﻿#### Exclude
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 
 #### Code Highlighter
@@ -67,9 +67,7 @@ widgets:
 
 #### RSS 
 rss: /atom.xml ## RSS address.
-theme: jacman
-stylus: 
-  compress: true
+
 #### Image
 imglogo:
   enable: false             ## display image logo true/false.
