--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ toc:
 links:
   码农圈: https://coderq.com
   WangYao's Blog: http://WangYao-sdu.github.io
-  董小五: http://dongjinglei.com/
+  DongJinglei's Blog: http://dongjinglei.com
 
 #### Comment
 duoshuo_shortname: wangyao
